              even if a progress tracker was passed.
            - Both turaevViro() and turaevViroApprox() now use ALG_TREEWIDTH
              as their default algorithm.  You can access the old algorithm
              by passing ALG_BACKTRACK.
            - Routine connectedSumWith() now adds fewer tetrahedra (thanks
              to Adele Jackson).
            - Changed maximalForestInSkeleton() to return by value
              instead of returning through a reference argument.
            - Changed maximalForestInBoundary() to return the edge set by
              value, and to not return the vertex set at all (since this
              is just all boundary vertices).
            - Routines insertLayeredLoop(), insertLayeredLensSpace(),
              insertAugTriSolidTorus() and insertSFSOverSphere() are all
              deprecated.  Use the routines from Example<3> instead.
            - Routine enterTextTriangulation() is now deprecated; this
              is a relic from Regina's ancient past.
        Class Triangluation<4>:
            - All of the changes listed for Triangulation<dim> above.
            - Overhauled retriangulate() to be faster, more generic, and
              support actions that take an isomorphism signature as well as
              a full triangluation.  This function is now also available
              through Python, and can take a pure Python function as its
              action argument.  It no longer runs in the background (even if a
              progress tracker is passed), and it now throws an exception
              if the triangulation has multiple components.
            - Routine simplifyExhaustive() no longer runs in the background
              (even if a progress tracker is passed), and it now throws an
              exception if the triangulation has multiple components.
        Class TrieSet:
            - This is no longer a template class (though its member